--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: vietmap_flutter_gl
+name: vietmap_iee_map
 description: A Flutter map plugin for integrating Vietmap sdk inside a Flutter application, support for show a vector and raster map in Flutter. Supported on Android, iOS platforms .
-version: 1.1.7
+version: 1.0.0
 homepage: https://github.com/vietmap-company
 repository: https://github.com/vietmap-company/flutter-map-sdk
 issue_tracker: https://github.com/vietmap-company/flutter-map-sdk/issues
@@ -8,7 +8,7 @@ issue_tracker: https://github.com/vietmap-company/flutter-map-sdk/issues
 dependencies:
   flutter:
     sdk: flutter
-  vietmap_gl_platform_interface: ^0.0.6 
+  vietmap_iee_gl_platform_interface: ^0.0.1
 
 
 flutter:
